fix(clients testimonial styles): make items inside the sction relative components and with z-index 2

--- a/styles/style.css
+++ b/styles/style.css
@@ -144,6 +144,10 @@ body {
 }
 .clients-testimonial-section {
   position: relative;
+}
+
+.clients-testimonial-section > * {
+  position: relative;
   z-index: 2;
 }
 
